Refatoração colossal e correções!